# aranya-cli

./: .gitignore  AQC_CLI_EXTENSION_SUMMARY.md  Cargo.toml
cli-example/: build_run-daemon.sh  daemon_config.json  device_setup.sh  devices_with_keys.csv  generate_keys.sh  team_creation_device_registration.sh  team_env.sh
cli-example/aranya_scripts/: Cargo.toml  README.md  cleanup.sh  complete_setup.sh  device_setup.sh  generate_aranya_keys.rs  generate_keys.sh  owner_setup.sh
crates/aranya-cli/: Cargo.toml  README.md
crates/aranya-cli/src/: main.rs
crates/aranya-cli/testing/cli-only/: README.md  config_daemon1.json  config_daemon2.json  config_daemon3.json  config_daemon4.json  config_daemon5.json  env  generate_configs.sh  line-by-line-testing-cli.sh  log  old-use-channels.sh  start-daemons-for-channels.sh  start-daemons.sh  troubleshootin.sh  use-channels-multi-daemon.sh  use-channels-simple.sh  use-channels.sh
crates/aranya-client/: Cargo.toml
crates/aranya-client/src/aqc/: api.rs
crates/aranya-daemon-api/src/: service.rs
crates/aranya-daemon/src/: api.rs  aqc.rs
examples/rust/cli/: command-testing.sh  run-and-test.sh
examples/rust/src/: main.rs
