[package]
name = "aranya-cli"
version = "0.1.0"
edition = "2021"
authors = ["Aranya Contributors"]
description = "CLI tool for Aranya operations"
repository = "https://github.com/aranya-project/aranya-core"
license = "Apache-2.0"
keywords = ["aranya", "cli", "security", "teams"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
aranya-client = { path = "../aranya-client" }
aranya-daemon-api = { path = "../aranya-daemon-api" }
aranya-util = { path = "../aranya-util" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
spideroak-base58 = "0.2"

[[bin]]
name = "aranya"
path = "src/main.rs"